        Add member and setter to let us stash the title direction at load time.

        * DumpRenderTree/chromium/WebViewHost.cpp:
        (WebViewHost::didReceiveTitle):
        * DumpRenderTree/chromium/WebViewHost.h:
        Adapt to new API; push the title into layoutTestController when we
        receive it.

2011-04-18  Dirk Pranke  <dpranke@chromium.org>

        Reviewed by Tony Chang.

        new-run-webkit-tests: don't run more processes than necessary
        https://bugs.webkit.org/show_bug.cgi?id=58751

        Previously NRWT would start up 1 process for each processor on
        the machine by default, which was a waste if we were only
        running a few shards of tests.

        * Scripts/webkitpy/layout_tests/layout_package/test_runner.py:
        * Scripts/webkitpy/layout_tests/layout_package/test_runner2.py:
        * Scripts/webkitpy/layout_tests/run_webkit_tests_unittest.py:

2011-04-18  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Eric Seidel.

        include links to actual.png files for new pixel tests
        https://bugs.webkit.org/show_bug.cgi?id=58831

        Load image elements to confirm whether the files exist.
        Image elements will load without being appended to the DOM.

        * Scripts/webkitpy/layout_tests/layout_package/json_results.html:

2011-04-18  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Eric Seidel.

        add a zoomed view for pixel results to the new results html file
        https://bugs.webkit.org/show_bug.cgi?id=58827

        * Scripts/webkitpy/layout_tests/layout_package/json_results.html:

2011-04-18  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Eric Seidel.

        add labels to results html page
        https://bugs.webkit.org/show_bug.cgi?id=58803

        -fix iframe size to be the size of the png results
        -fix a bunch of aesthetic nits
        -fix some incorrectly styled code

        * Scripts/webkitpy/layout_tests/layout_package/json_results.html:
